# ablab

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: desktop.yml
docs/: PUBLISHING.md  USAGE.md  USAGE_EN.md
examples/: sample_experiment.csv
scripts/: gen_icons.py
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
